<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.john.ciceron.TaskActivity">

    <RelativeLayout
        android:id="@+id/layoutForButtons"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:text="@string/SelectPlace"
            android:layout_width="115dp"
            android:layout_height="30dp"
            android:id="@+id/textView"
            android:layout_gravity="top"
            android:layout_marginLeft="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Spinner
            android:id="@+id/spinner_places"
            tools:style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:background="@color/cast_expanded_controller_ad_label_background_color"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:layout_below="@+id/textView"/>

        <Button
            android:text="@string/Save"
            android:id="@+id/button_save"
            android:onClick="onClickSave"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_width="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="0dp"/>

        <Button
            android:text="@string/AddLocationButton"
            android:id="@+id/button_location"
            android:onClick="onClickLocation"
            android:layout_height="50dp"
            android:layout_width="105dp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/button_save"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>
    <LinearLayout
            android:layout_below="@+id/layoutForButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTask"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:gravity="top"
            android:scrollbars="vertical"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp"
            android:hint="@string/HintForTaskEdit" />
</LinearLayout>

</RelativeLayout>
